# wro2026-fe-HHG_Phoenix

./: .gitignore
block_detection/: .gitignore  main.py  preprocess_data.py  visulize_predictions.py
block_detection/pytorch/: main.py  main_torch.py  preprocess_data_torch.py  visulize_predictions.py
ros_stuff/: .gitignore  LICENSE  README.md  download_build.sh  download_build_launch.sh  robotParts.md
ros_stuff/ros_ws/: dependencies.yaml  launchfile.py
ros_stuff/ros_ws/src/robot_bringup/: CMakeLists.txt  package.xml
ros_stuff/ros_ws/src/robot_bringup/config/: nav2_params.yaml  slam_toolbox_params.yaml
ros_stuff/ros_ws/src/robot_bringup/launch/: robot_nav2_slam_launch.py  robot_nav_launch.py  robot_slam_launch.py
ros_stuff/ros_ws/src/robot_bringup/urdf/: robot.urdf  robot.urdf.xacro
ros_stuff/ros_ws/src/robot_control/: CMakeLists.txt  package.xml
ros_stuff/ros_ws/src/robot_control/src/: motor_controller.cpp  servo.cpp
